[DEV] - Added nav links to the nav bar. Added a dark theme switch.

--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -21,7 +21,12 @@ button {
     background-color: transparent;
     border: none;
 
-    :hover {
+    &:hover {
         cursor: pointer;
     }
+}
+
+
+li {
+    list-style: none;
 }
