[CLIENT] [Dev] - Added animations on certain icons and refactoring.

--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -30,3 +30,14 @@ button {
 li {
     list-style: none;
 }
+
+span.material-symbols-rounded {
+    transition: 0.2s ease-in-out all;
+    &:hover {
+        font-variation-settings:
+            'FILL'1,
+            'wght'400,
+            'GRAD'0,
+            'opsz'24
+    }
+}
