--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
     margin: 20px;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
     transition: 0.5s ease all;
 }
 
@@ -20,9 +20,16 @@ a {
 button {
     background-color: transparent;
     border: none;
-
     &:hover {
         cursor: pointer;
+
+        span.material-symbols-rounded {
+            font-variation-settings:
+                    'FILL'1,
+                    'wght'400,
+                    'GRAD'0,
+                    'opsz'24
+        }
     }
 }
 
@@ -33,11 +40,4 @@ li {
 
 span.material-symbols-rounded {
     transition: 0.2s ease-in-out all;
-    &:hover {
-        font-variation-settings:
-            'FILL'1,
-            'wght'400,
-            'GRAD'0,
-            'opsz'24
-    }
 }
